--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,11 @@
 background: -webkit-linear-gradient(to top, #0052D4, #65C7F7, #9CECFB);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to top, #0052D4, #65C7F7, #9CECFB); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 text-align: center;
-
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
 }
 .avatar-img {
     height: 250px;
@@ -34,4 +38,15 @@ text-align: center;
     font-size: 20px;
     color: white;
     padding: 1em;
+}
+.social-links {
+    display: flex;
+    justify-content: space-evenly;
+    width: 50%;
+    margin: auto;
+}
+.social-links i {
+    color: white;
+    font-size: 5em;
+    padding: 8px;
 }
