--- a/src/App.css
+++ b/src/App.css
@@ -61,5 +61,17 @@
     width: 100%;
     height: 100%;
 }
+.paragraph {
+    padding-left: 6rem;
+    padding-right: 6rem;
+    text-align: center;
+    font-weight: 600;
+    ;
+  }
+  .about-page h1 {
+    text-align: center;
+    margin-top: 2rem;
+    font-weight: bold;
+  }
 /* Styling for the Resume Page */
 /* Styling for the Projects Page */
