add css to style the p and h6 tags in the resume-grid

--- a/src/App.css
+++ b/src/App.css
@@ -60,5 +60,13 @@
 .resume-right-col {
     background: #27221f;
     color: white;
+    padding-left: 2em;
+}
+.side-bar-p {
+    margin-top: 0px;
+}
+.resume-grid h6 {
+    margin-bottom: 0px;
+    margin-top: .5px;
 }
 /* Styling for the Projects Page */
