--- a/src/App.css
+++ b/src/App.css
@@ -82,7 +82,19 @@ h6 {
     margin-top: 8px;
     margin-bottom: 0px;
 }
-#education-grid, #workExperience-grid, #skills-grid {
+/*Styling for Education Component*/
+#education-grid {
+    padding: 0px;
+}
+/* Styling for WorkExperience Component*/
+#workExperience-grid ul {
+    margin: 0px;
+}
+#workExperience-grid {
+    padding: 0px;
+}
+/*Styling for Skills Component*/
+#skills-grid {
     padding: 0px;
 }
 /* Styling for the Projects Page */
