add css styling for certificate component

--- a/src/App.css
+++ b/src/App.css
@@ -97,4 +97,8 @@ h6 {
 #skills-grid {
     padding: 0px;
 }
+/* Styling for Certificates Component*/
+#certificate-grid {
+    padding: 0px;
+}
 /* Styling for the Projects Page */
