--- a/src/App.css
+++ b/src/App.css
@@ -123,6 +123,14 @@ h6 {
     border-radius: 10px;
     color: white;
     margin: 3em;
-    
+}
+.icon-list i {
+    font-size: 40px;
+    padding-right: 10px;
+}
+#icon {
+    font-size: 20px;
+    color: white;
+    font-weight: bold;
 }
 /* Styling for the Projects Page */
