change the indentation and css of about page

--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,7 @@
     font-weight: 600;
     font-size: 2vmax;
     margin: 1vmax 3vw ;
+    padding: 0em 1em 0em 1em;
 }
 .about-page h1 {
     text-align: center;
