add css to make a tags in left col white

--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,10 @@
     margin-bottom: 0px;
     margin-top: 0.5px;
 }
+.resume-left-col a {
+    text-decoration: none;
+    color: white;
+}
 .language-h6 {
     margin-top: 0px;
     margin-bottom: 0px;
