add css to display page as needed

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
     background: #9CECFB;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to top, #0052D4, #65C7F7, #9CECFB);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to top, #0052D4, #65C7F7, #9CECFB); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    
+    contain: content;
+    padding-bottom: 2em;
 }
 
 /* Styling for the Homepage */
@@ -124,18 +125,18 @@ h6 {
 } 
 
 /* Styling for the Contact Me Page */
-#contactMe-grid {
-    /* text-align: center; */
-    /* justify-content: center; */
-    /* width: auto; */
-    /* height: auto; */
+.contactMe-grid {
+    text-align: center;
     background-color: rgba(0, 0, 0, .8);
     border-radius: 10px;
     color: white;
+    padding: 2vmin;
+    margin: 3vmax;
 }
 #icon {
     font-size: 30px;
     font-weight: bold;
+    padding: .5em 0em .5em 2em;
 }
 #icon a {
     text-decoration: none;
